# ethfinex-rs

./: README.md
examples/: Cargo.toml
examples/src/: private_endpoints.rs  public_channels.rs  public_endpoints.rs
src/: account.rs  api.rs  book.rs  client.rs  events.rs  lib.rs  pairs.rs  tickers.rs  websockets.rs
