[package]
name = "ethfinex-app"
version = "0.1.0"
authors = ["Flavio Oliveira <flavio@wisespace.io> & Joshua Batty <joshpbatty@gmail.com>"]

[[bin]]
name = "private_endpoints"
path = "src/private_endpoints.rs"

[[bin]]
name = "public_endpoints"
path = "src/public_endpoints.rs"

[[bin]]
name = "public_channels"
path = "src/public_channels.rs"

[dependencies]
ethfinex = { path = "../" }